Criando endpoint update e delete, refatorando listagem com pagincação e filtros.

--- a/4-Infra/Bernhoeft.GRT.Teste.Infra.Persistence.InMemory/Bernhoeft.GRT.Teste.Infra.Persistence.InMemory.csproj
+++ b/4-Infra/Bernhoeft.GRT.Teste.Infra.Persistence.InMemory/Bernhoeft.GRT.Teste.Infra.Persistence.InMemory.csproj
@@ -18,6 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\2-Application\Bernhoeft.GRT.Teste.Application\Bernhoeft.GRT.Teste.Application.csproj" />
     <ProjectReference Include="..\..\3-Domain\Bernhoeft.GRT.Teste.Domain\Bernhoeft.GRT.Teste.Domain.csproj" />
   </ItemGroup>
 
