Adicionando teste unitarios

--- a/0-Tests/Bernhoeft.GRT.Teste.IntegrationTests/Bernhoeft.GRT.Teste.IntegrationTests.csproj
+++ b/0-Tests/Bernhoeft.GRT.Teste.IntegrationTests/Bernhoeft.GRT.Teste.IntegrationTests.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="9.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="9.0.2" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.13.0" />
+    <PackageReference Include="Moq" Version="4.20.72" />
     <PackageReference Include="SeedEasy" Version="2.0.3" />
     <PackageReference Include="Soenneker.Utils.AutoBogus" Version="3.0.689" />
     <PackageReference Include="xunit" Version="2.9.3" />
@@ -23,6 +24,18 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\1-Presentation\Bernhoeft.GRT.Teste.Api\Bernhoeft.GRT.Teste.Api.csproj" />
+    <ProjectReference Include="..\..\2-Application\Bernhoeft.GRT.Teste.Application\Bernhoeft.GRT.Teste.Application.csproj" />
+    <ProjectReference Include="..\..\3-Domain\Bernhoeft.GRT.Teste.Domain\Bernhoeft.GRT.Teste.Domain.csproj" />
+    <ProjectReference Include="..\..\4-Infra\Bernhoeft.GRT.Teste.Infra.Persistence.InMemory\Bernhoeft.GRT.Teste.Infra.Persistence.InMemory.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="Bernhoeft.GRT.Core">
+      <HintPath>..\..\Libs\Bernhoeft.GRT.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Bernhoeft.GRT.Core.EntityFramework">
+      <HintPath>..\..\Libs\Bernhoeft.GRT.Core.EntityFramework.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
